k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careercoach-backend-service
  labels:
    app: careercoach-backend
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: careercoach-backend
